# hotel-booking

.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
hotel_booking/: .pre-commit-config.yaml  manage.py  pyproject.toml
hotel_booking/src/: conftest.py
hotel_booking/src/booking/: models.py  serializers.py  tests.py  views.py
hotel_booking/src/booking/migrations/: 0001_initial.py
hotel_booking/src/config/: asgi.py  settings.py  urls.py  wsgi.py
hotel_booking/src/rooms/: models.py  serializers.py  tests.py  views.py
hotel_booking/src/rooms/migrations/: 0001_initial.py
